--- a/page1.html
+++ b/page1.html
@@ -12,12 +12,8 @@
     <!--CSS-->
     <link rel="stylesheet" href="Assets/CSS/style.css">
     <!--JAVASCRIPT-->
-    <script src="Assets/JS/pub.js"></script>
-    <!--Bootstrap-->
+    <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 </head>
 
@@ -33,28 +29,18 @@
         </header>
     </div>
 
-    <div class="container">
+    <div class="form-container form-inline">
 
-        <form class="form-inline">
-            <label class="sr-only" for="inlineFormInputName2">Name</label>
-            <input type="text" class="form-control-input" id="inlineFormInputName2" placeholder="Search by City:">
+        <input type="text" class="form-control-input" id="search" placeholder="Search by City,State,Zip">
 
-
-
-            <div class="form-check mb-2 mr-sm-2">
-                <input class="form-check-input" type="checkbox" id="inlineFormCheck">
-            </div>
-
-            <button type="submit" id="submit" class="button-submit">Submit</button>
-        </form>
-        <div class="container w-50 d-flex flex">
-            <div id="display-bars" class="d-flex flex-wrap align-items-center border border-dark"></div>
-        </div>
-
+        <button id="submit" class="button-submit">Submit</button>
 
     </div>
+    <div class="container d-flex flex align-items-center">
+        <div id="display-bars" class="d-flex flex-wrap align-items-center justify-between"></div>
+    </div>
 
-
+    <script src="./Assets/JS/pub.js"></script>
 
 
 </body>
