starting javascript for bar details page

--- a/page1.html
+++ b/page1.html
@@ -36,8 +36,8 @@
         <button id="submit" class="button-submit">Submit</button>
 
     </div>
-    <div class="container d-flex flex align-items-center">
-        <div id="display-bars" class="d-flex flex-wrap align-items-center justify-between"></div>
+    <div class="container-fluid d-flex flex">
+        <div id="display-bars" class="d-flex flex-wrap justify-content-center"></div>
     </div>
 
     <script src="./Assets/JS/pub.js"></script>
