--- a/page2.html
+++ b/page2.html
@@ -30,7 +30,7 @@
         </header>
     </div>
 
-    <div class="form-container form-inline">
+    <!-- <div class="form-container form-inline">
 
         <input type="text" class="form-control-input" id="search" placeholder="Search by City,State,Zip">
 
@@ -39,11 +39,11 @@
     </div>
     <div class="container-fluid d-flex flex">
         <div id="display-bars" class="d-flex flex-wrap justify-content-center"></div>
-    </div>
+    </div> -->
+
     <div class="container-fluid d-flex flex">
-        <div id="display-details"></div>
-        <div id="displayImageMap" class="d-flex flex-column">
-            <div id="map" class="mt-3"></div>
+        <div id="display-details" class="d-flex flex-wrap justify-content-center"></div>
+        <div class="container-fluid flex-column" id="displayImageMap">
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel" data-interval="3000">
                 <div class="carousel-inner image">
                     <!-- <div class="carousel-item active "></div> -->
@@ -57,6 +57,7 @@
                     <span class="sr-only">Next</span> -->
                 </a>
             </div>
+            <div id="map" class="mt-3"></div>
         </div>
     </div>
 
@@ -64,9 +65,9 @@
 
 
 
-    <script src="./Assets/JS/pub.js "></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3FQ-5OZ05b4mW2XFKnOjV3mZACofU-rI&callback=initMap">
     </script>
+    <script src="./Assets/JS/pub.js "></script>
 </body>
 
 </html>
