--- a/page1.html
+++ b/page1.html
@@ -32,7 +32,7 @@
 
     <div class="form-container form-inline">
 
-        <input type="text" class="form-control-input" id="search" placeholder="Search by City,State,Zip">
+        <input type="text" class="form-control-input" id="search" placeholder="Search by City, State, Zip">
 
         <button id="submit" class="button-submit">Submit</button>
 
@@ -43,7 +43,7 @@
     <div class="container-fluid d-flex flex">
         <div id="display-details"></div>
         <div id="displayImageMap" class="d-flex flex-column">
-            <div id="map" class="mt-3"></div>
+            <div id="map"></div>
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel" data-interval="3000">
                 <div class="carousel-inner image">
                     <!-- <div class="carousel-item active "></div> -->
